又提交一次

--- a/索引号.html
+++ b/索引号.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <a href="#">1</a>
+        <!-- <a href="#">1</a> -->
         <a href="#">2</a>
         <a href="#">3</a>
     </div>
